--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,89 +11,58 @@
 }
 
 
+header{
+    height: 150px;
+}
 
-
+#mainContent{
+    border: solid 1px black;
+    min-height: 900px;
+}
 
 footer{
-    height: 100px;
+    height: 150px;
 }
 
-/* Display List */
+/* navigation */
 
-#displaySelect{
-    background-color: #333;
-    font-size: 48pt;
+#mainNavigation{
+    position:relative;
+}
+
+.tools{
+    position:absolute;
+    bottom:0;
+}
+
+.tools a{
+    display:block;
     text-align: center;
+    text-decoration: none;
+    font-size: 28pt;
+
 }
-
-#displaySelect option{
-    display:inline-block;
-}
-
-#displaySelect option:hover{
-    background-color: red;
-}
-
-
-/* Home */
 
 .roomList{
-    background-color: #999;
-    min-height: 100%;
+    background-color: #fff;
+    height: 100%;
 }
 
-
-.roomList ul li a{
-    display:block;
-    height: 80px;
-    font-size: 48pt;
-    font-family: Arial, Helvetica, sans-serif;
-    color:red;
-    line-height: 100%;
+.roomListItem{
+    font-size: 50pt;
+    height: 100%;
 }
 
-.roomList ul li:hover{
+.roomListItem:hover{
     background-color: red;
+    color: black;
 }
 
-.roomContent{
-    min-height: 100%;
-    height: 990px;
-    border:solid 1px black;
+.roomListItem::after{
+    background-color: blue;
 }
-
-.roomContent img{
-    position:absolute;
-    left:55%;
-    bottom:50%;
-}
-
-
-
 
 /* Room */
-
-.schedule{
-    height: 100%;
-    width: 100%;
-}
-
-#room1{
-    background-color: green;
-    display:none;
-}
-
-#room2{
-    background-color: blue;
-    display:none;
-
-}
-
-#room3{
-    background-color: purple;
-    display:none;
-
-}
 
 
 /* Schedule */
@@ -101,4 +70,23 @@ footer{
 .participantList{
     background-color: #999;
     border: solid 1px red;
+}
+
+.schedule{
+    border:solid 1px #777;
+    height: 100%;
+    min-height: 900px;
+}
+
+
+/* modal */
+
+@media screen and (min-width: 676px) {
+    .modal-dialog {
+        min-width: 80%; /* New width for default modal */
+      
+    }
+    .modal-content {
+        min-height: 800px;
+    }
 }
